--- a/案例.html
+++ b/案例.html
@@ -47,7 +47,7 @@
         var app = new Vue({
             el: '#todoapp',
             data: {
-                list: ["写代码", "吃饭饭", "睡觉觉"],
+                list: ["写代码", "吃饭饭", "睡觉觉","聊天天"],
                 inputValue: "好好学习，天天向上"
 
             },
